Update to base 1.3.1
Signed-off-by: Mark Cram <mark.cram@oracle.com>

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -19,6 +19,8 @@ ssh_private_key_path = "/path/to/ssh_private_key"
 
 ssh_public_key_path = "/path/to/ssh_public_key"
 
+ssh_public_key = ""
+
 # general oci parameters
 label_prefix = "dev"
 
